# ogma

./: UPGRADE_PLAN.md  prompt.md
backend/: .env.example  .gitignore  Dockerfile  README.md  SETUP.md  alembic.ini  docker-compose.yml  pw.txt  pyproject.toml  test_loader.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_ai_feedback_structured_fields.py  0003_open_world_simulation.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: __init__.py  action_interpreter.py  brief_loader.py  consequence_engine.py  domain_validator.py  groq_helper.py  image_library.py  mentor_coach.py  npc_director.py  orchestrator.py  schemas.py  visual_director.py
backend/app/agents/images/: manifest.json
backend/app/agents/prompts/: README.md  consequence_engine.system.md  interpreter.system.md  (+2 more)
backend/app/ai/: __init__.py  context_assembler.py  feedback_generator.py  groq_adapter.py  prompt_builder.py  provider_adapter.py
backend/app/core/: events.py  exceptions.py  logging.py  security.py
backend/app/db/: base.py  redis.py  session.py
backend/app/middleware/: rate_limit.py
backend/app/services/: auth_service.py  decision_service.py  progress_service.py  session_service.py
backend/app/simulation/: engine.py  executor.py  loader.py  metrics.py  rule_evaluator.py  state_machine.py
backend/local_db/: postgresql.conf  postmaster.opts
backend/local_db/global/: 1260  1262  1262_fsm  1262_vm  2396  2397  2671  2672  2676  config_exec_params  pg_control  pg_internal.init
backend/local_db/pg_xact/: 0000
backend/scripts/: seed_briefs.py  seed_scenarios.py
backend/scripts/briefs/: doctor_diagnosis_dilemma.json
backend/tests/: conftest.py
(+423 files in other folders)
